--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  Build_and_Run:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
